Add a bit more informations

--- a/apache2/Dockerfile
+++ b/apache2/Dockerfile
@@ -1,7 +1,7 @@
 #
 # apache2 Dockerfile
 #
-# Pull base image
+# Pull base image (this is a stock stable image right from debootstrap)
 FROM waja/debian:latest
 
 # Predefine ENV
