Dont daemonize icinga

--- a/Dockerfiles/icinga2/supervisord/icinga.conf
+++ b/Dockerfiles/icinga2/supervisord/icinga.conf
@@ -3,5 +3,5 @@
 #user=nagios
 
 [program:icinga2]
-command=/usr/sbin/icinga2 -c /etc/icinga2/icinga2.conf -u nagios -g nagios -d -e /var/log/icinga2/icinga2.err
+command=/usr/sbin/icinga2 -c /etc/icinga2/icinga2.conf -u nagios -g nagios -e /var/log/icinga2/icinga2.err
 user=nagios
