Trying to reload apache after icinga is started

--- a/Dockerfiles/icinga2/supervisord/icinga.conf
+++ b/Dockerfiles/icinga2/supervisord/icinga.conf
@@ -3,5 +3,6 @@
 #user=nagios
 
 [program:icinga2]
-command=/usr/sbin/icinga2 -c /etc/icinga2/icinga2.conf -u nagios -g nagios -e /var/log/icinga2/icinga2.err
+command=/bin/bash -c "/usr/sbin/icinga2 -c /etc/icinga2/icinga2.conf -u nagios -g nagios -e /var/log/icinga2/icinga2.err && sleep 5 && /etc/init.d/apache2 reload"
 user=nagios
+prioritya=100
