Reload apache2 after starting icinga2

--- a/Dockerfiles/icinga2/supervisord/icinga.conf
+++ b/Dockerfiles/icinga2/supervisord/icinga.conf
@@ -1,8 +1,4 @@
-#[program:icinga-cgi]
-#command=/usr/sbin/icinga -d /etc/icinga/icinga.cfg
-#user=nagios
-
 [program:icinga2]
-command=/bin/bash -c "/usr/sbin/icinga2 -c /etc/icinga2/icinga2.conf -u nagios -g nagios -e /var/log/icinga2/icinga2.err && sleep 5 && /etc/init.d/apache2 reload"
+command=/usr/sbin/icinga2 -c /etc/icinga2/icinga2.conf -u nagios -g nagios -e /var/log/icinga2/icinga2.err
 user=nagios
-prioritya=100
+priority=9998
