--- a/Dockerfiles/icinga2/conf.d/ripe.net/atlas.ripe.net.conf
+++ b/Dockerfiles/icinga2/conf.d/ripe.net/atlas.ripe.net.conf
@@ -6,7 +6,7 @@ object Host "atlas.ripe.net" {
   vars.no_ping4_check = "1" 
 }
 
-apply Dependency "parent-atlas.ripe.net" to Host {
+apply Dependency "parent" to Host {
   parent_host_name = "localhost"
   disable_checks = true
   disable_notifications = true
