Install nagios-plugins-standard dependencies

--- a/Dockerfiles/icinga2/Dockerfile
+++ b/Dockerfiles/icinga2/Dockerfile
@@ -34,7 +34,9 @@ RUN echo "icinga2-classicui icinga2-classicui/adminpassword password $PREDEF_WEB
 # package installation
 RUN apt-get install -y -t wheezy-backports icinga2-classicui icinga2;\
  apt-get install -y -t wheezy-backports nagios-plugins-basic;\
- apt-get install -y -t wheezy-backports --no-install-recommends nagios-plugins-standard dnsutils
+ apt-get install -y -t wheezy-backports --no-install-recommends nagios-plugins-standard;\
+# install dependencies for nagios-plugins-standard
+ apt-get install -y -t wheezy-backports --no-install-recommends  dnsutils snmp
 
 # start init script to get environment initialised
 RUN /etc/init.d/icinga2 start && /etc/init.d/icinga2 stop
