adding snmp-load command

--- a/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
+++ b/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
@@ -4,10 +4,35 @@ object CheckCommand "dig" {
         command = PluginDir + "/check_dig"
 
         arguments = {
-                "-H" = "$dig_server$",
-		"-l" = "$dig_lookup$",
+                "-H" = "$dig_server$"
+		"-l" = "$dig_lookup$"
         }
 
         vars.dig_server = "$address$"
 }
 
+object CheckCommand "snmp-load" {
+	import "plugin-check-command",
+
+	command = PluginDir + "/check_snmp_load.pl"
+
+	arguments = {
+		"-H" = "$snmp_address$"
+		"-C" = "$snmp_community$"
+		"-p" = "$snmp_port$"
+		"-T" = "$snmp_load_type$"
+		"-v2c" = {
+			set_if = "$snmp_v2c$"
+		}
+		"-f" = {
+			set_if = "$snmp_perf$"
+		}
+		"-w", "$snmp_load_warn$"
+		"-c", "$snmp_load_crit$"
+	}
+
+	vars.snmp_address = "$address$"
+	vars.snmp_community = "public"
+	vars.snmp_v2c = true
+	vars.snmp_perf = true
+}
