Fixing snmp-load

--- a/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
+++ b/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
@@ -23,16 +23,17 @@ object CheckCommand "snmp-load" {
 		"-T" = "$snmp_load_type$"
 		"-v2c" = {
 			set_if = "$snmp_v2c$"
+			order = 1
 		}
 		"-f" = {
 			set_if = "$snmp_perf$"
 		}
-		"-w", "$snmp_load_warn$"
-		"-c", "$snmp_load_crit$"
+		"-w" = "$snmp_load_warn$"
+		"-c" = "$snmp_load_crit$"
 	}
 
 	vars.snmp_address = "$address$"
 	vars.snmp_community = "public"
-	vars.snmp_v2c = true
+	vars.snmp_v2c = false
 	vars.snmp_perf = true
 }
