--- a/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
+++ b/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
@@ -20,7 +20,6 @@ object CheckCommand "snmp-load" {
 		"-H" = "$snmp_address$"
 		"-C" = "$snmp_community$"
 		"-p" = "$snmp_port$"
-		"-T" = "$snmp_load_type$"
 		"-v2c" = {
 			set_if = "$snmp_v2c$"
 			order = 1
@@ -30,10 +29,44 @@ object CheckCommand "snmp-load" {
 		}
 		"-w" = "$snmp_load_warn$"
 		"-c" = "$snmp_load_crit$"
+
+		"-T" = "$snmp_load_type$"
 	}
 
 	vars.snmp_address = "$address$"
 	vars.snmp_community = "public"
 	vars.snmp_v2c = false
 	vars.snmp_perf = true
+}
+
+object CheckCommand "snmp-memory" {
+	import "plugin-check-command",
+
+	command = PluginDir + "/check_snmp_mem.pl"
+
+	arguments = {
+		"-H" = "$snmp_address$"
+		"-C" = "$snmp_community$"
+		"-p" = "$snmp_port$"	
+		"-v2c" = {
+			set_if = "$snmp_v2c$"
+			order = 1
+		}
+		"-f" = {
+			set_if = "$snmp_perf$"
+		}
+		"-w" = "$snmp_load_warn$"
+		"-c" = "$snmp_load_crit$"
+
+		"-b" = {
+			set_if = "$snmp_mem_buffer$"
+		}
+	}
+
+	vars.snmp_address = "$address$"
+	vars.snmp_community = "public"
+	vars.snmp_v2c = false 
+	vars.snmp_perf = true 
+
+	vars.snmp_mem_buffer = true
 }
