Make use of the template engine

--- a/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
+++ b/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
@@ -11,10 +11,8 @@ object CheckCommand "dig" {
         vars.dig_server = "$address$"
 }
 
-object CheckCommand "snmp-load" {
+template CheckCommand "snmp-manubulon-command" {
 	import "plugin-check-command",
-
-	command = PluginDir + "/check_snmp_load.pl"
 
 	arguments = {
 		"-H" = "$snmp_address$"
@@ -29,8 +27,6 @@ object CheckCommand "snmp-load" {
 		}
 		"-w" = "$snmp_load_warn$"
 		"-c" = "$snmp_load_crit$"
-
-		"-T" = "$snmp_load_type$"
 	}
 
 	vars.snmp_address = "$address$"
@@ -39,34 +35,27 @@ object CheckCommand "snmp-load" {
 	vars.snmp_perf = true
 }
 
+
+object CheckCommand "snmp-load" {
+	import "snmp-manubulon-command",
+
+	command = PluginDir + "/check_snmp_load.pl"
+
+	arguments += {
+		"-T" = "$snmp_load_type$"
+	}
+}
+
 object CheckCommand "snmp-memory" {
-	import "plugin-check-command",
+	import "snmp-manubulon-command",
 
 	command = PluginDir + "/check_snmp_mem.pl"
 
-	arguments = {
-		"-H" = "$snmp_address$"
-		"-C" = "$snmp_community$"
-		"-p" = "$snmp_port$"	
-		"-v2c" = {
-			set_if = "$snmp_v2c$"
-			order = 1
-		}
-		"-f" = {
-			set_if = "$snmp_perf$"
-		}
-		"-w" = "$snmp_load_warn$"
-		"-c" = "$snmp_load_crit$"
-
+	arguments += {
 		"-b" = {
 			set_if = "$snmp_mem_buffer$"
 		}
 	}
-
-	vars.snmp_address = "$address$"
-	vars.snmp_community = "public"
-	vars.snmp_v2c = false 
-	vars.snmp_perf = true 
 
 	vars.snmp_mem_buffer = true
 }
