--- a/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
+++ b/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
@@ -1,16 +1,6 @@
-object CheckCommand "dig" {
-        import "plugin-check-command"
+/* check command templates */
 
-        command = PluginDir + "/check_dig"
-
-        arguments = {
-                "-H" = "$dig_server$"
-		"-l" = "$dig_lookup$"
-        }
-
-        vars.dig_server = "$address$"
-}
-
+/* template for nagios-snmp-plugins (http://nagios.proy.org/index_snmp.html)*/
 template CheckCommand "snmp-manubulon-command" {
 	import "plugin-check-command",
 
@@ -35,6 +25,20 @@ template CheckCommand "snmp-manubulon-command" {
 	vars.snmp_perf = true
 }
 
+/* check commands itself */
+
+object CheckCommand "dig" {
+	import "plugin-check-command"
+
+	command = PluginDir + "/check_dig"
+
+	arguments = {
+		"-H" = "$dig_server$"
+		"-l" = "$dig_lookup$"
+	}
+
+	vars.dig_server = "$address$"
+}
 
 object CheckCommand "snmp-load" {
 	import "snmp-manubulon-command",
