Adding checkcommand snmp-diskspace

--- a/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
+++ b/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
@@ -63,3 +63,15 @@ object CheckCommand "snmp-memory" {
 
 	vars.snmp_mem_buffer = true
 }
+
+object CheckCommand "snmp-diskspace" {
+	import "snmp-manubulon-command",
+
+	command = PluginDir + "/check_snmp_storage.pl"
+
+	arguments += {
+		"-m" = "$snmp_disk_mounts$"
+	}
+
+	vars.snmp_disk_mounts = "^/$"
+}
