--- a/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
+++ b/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
@@ -15,8 +15,8 @@ template CheckCommand "snmp-manubulon-command" {
 		"-f" = {
 			set_if = "$snmp_perf$"
 		}
-		"-w" = "$snmp_load_warn$"
-		"-c" = "$snmp_load_crit$"
+		"-w" = "$snmp_warn$"
+		"-c" = "$snmp_crit$"
 	}
 
 	vars.snmp_address = "$address$"
