use some default thresholds

--- a/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
+++ b/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
@@ -48,6 +48,9 @@ object CheckCommand "snmp-load" {
 	arguments += {
 		"-T" = "$snmp_load_type$"
 	}
+
+	vars.snmp_warn = "4,3,3"
+	vars.snmp_crit = "8,5,5"
 }
 
 object CheckCommand "snmp-memory" {
@@ -62,6 +65,8 @@ object CheckCommand "snmp-memory" {
 	}
 
 	vars.snmp_mem_buffer = true
+	vars.snmp_warn = "95,60"
+	vars.snmp_crit = "99,90"
 }
 
 object CheckCommand "snmp-diskspace" {
@@ -74,4 +79,6 @@ object CheckCommand "snmp-diskspace" {
 	}
 
 	vars.snmp_disk_mounts = "^/$"
+	vars.snmp_warn = "95,60"
+	vars.snmp_crit = "99,90"
 }
