Fixing snmp-diskspace variables

--- a/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
+++ b/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
@@ -78,7 +78,7 @@ object CheckCommand "snmp-diskspace" {
 		"-m" = "$snmp_disk_mounts$"
 	}
 
-	vars.snmp_disk_mounts = "^/$"
-	vars.snmp_warn = "95,60"
-	vars.snmp_crit = "99,90"
+	vars.snmp_disk_mounts = "^/$$"
+	vars.snmp_warn = "80"
+	vars.snmp_crit = "90"
 }
