A batch more checks

--- a/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
+++ b/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
@@ -82,3 +82,65 @@ object CheckCommand "snmp-diskspace" {
 	vars.snmp_warn = "80"
 	vars.snmp_crit = "90"
 }
+
+object CheckCommand "snmp-interface" {
+	import "snmp-manubulon-command",
+
+	command = PluginDir + "/check_snmp_int.pl"
+
+	arguments += {
+		"-n" = "$snmp_interface$"
+		"-k" = {
+			set_if = "$snmp_interface_perf$"
+		}
+		"-B" = {
+			set_if = "$snmp_interface_bits$"
+		}
+		"--64bits" = {
+			set_if = "$snmp_interface_64bit$"
+		}
+	}
+
+	vars.snmp_interface = "eth0"
+	vars.snmp_interface_perf = true
+	vars.snmp_interface_bits = true
+	vars.snmp_interface_64bit = false
+	vars.snmp_warn = "350,250"
+	vars.snmp_crit = "0,0"
+}
+
+object CheckCommand "mysql" {
+	import "plugin-check-command"
+
+	command = PluginDir + "/check_mysql"
+
+	arguments = { 
+		"-H", "$mysql_server$"
+		"-d", "$mysql_database$"
+		"-u", "$mysql_username$"
+		"-p", "$mysql_password$"
+	}
+
+	vars.mysql_server = "$address$"
+	vars.mysql_database = "test"
+	vars.mysql_username = "icinga"
+	vars.mysql_password = "icinga"
+}
+
+object CheckCommand "pgsql" {
+	import "plugin-check-command"
+
+	command = PluginDir + "/check_pgsql"
+
+	arguments = {
+		"-H", "$pgsql_server$",
+		"-d", "$pgsql_database$",
+		"-l", "$pgsql_username$",
+		"-p", "$pgsql_password$"
+	}
+
+	vars.pgsql_server = "$address$"
+	vars.pgsql_database = "icinga"
+	vars.pgsql_username = "icinga"
+	vars.pgsql_password = "icinga"
+}
