Fixing command definitions

--- a/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
+++ b/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
@@ -115,10 +115,10 @@ object CheckCommand "mysql" {
 	command = PluginDir + "/check_mysql"
 
 	arguments = { 
-		"-H", "$mysql_server$"
-		"-d", "$mysql_database$"
-		"-u", "$mysql_username$"
-		"-p", "$mysql_password$"
+		"-H" = "$mysql_server$"
+		"-d" = "$mysql_database$"
+		"-u" = "$mysql_username$"
+		"-p" = "$mysql_password$"
 	}
 
 	vars.mysql_server = "$address$"
@@ -133,10 +133,10 @@ object CheckCommand "pgsql" {
 	command = PluginDir + "/check_pgsql"
 
 	arguments = {
-		"-H", "$pgsql_server$",
-		"-d", "$pgsql_database$",
-		"-l", "$pgsql_username$",
-		"-p", "$pgsql_password$"
+		"-H" = "$pgsql_server$",
+		"-d" = "$pgsql_database$",
+		"-l" = "$pgsql_username$",
+		"-p" = "$pgsql_password$"
 	}
 
 	vars.pgsql_server = "$address$"
