Adding httpd_status checkcommand

--- a/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
+++ b/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
@@ -142,3 +142,20 @@ object CheckCommand "pgsql" {
 	vars.pgsql_username = "icinga"
 	vars.pgsql_password = "icinga"
 }
+
+object CheckCommand "httpd_status" {
+	import "plugin-check-command"
+
+	command = PluginDir + "/check_httpd_status"
+
+	arguments = {
+		"-H" = "$httpd_status_address$"
+		"-u" = "$httpd_status_uri$"
+		"-p" = "$httpd_status_port$"
+		"-t" = "$httpd_status_timeout$"
+		"-w" = "$httpd_status_warn_slots$"
+		"-c" = "$httpd_status_critical_slots$"
+	}
+
+	vars.httpd_status_address = "$address$"
+}
