--- a/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
+++ b/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
@@ -132,9 +132,9 @@ object CheckCommand "pgsql" {
 	command = PluginDir + "/check_pgsql"
 
 	arguments = {
-		"-H" = "$pgsql_server$",
-		"-d" = "$pgsql_database$",
-		"-l" = "$pgsql_username$",
+		"-H" = "$pgsql_server$"
+		"-d" = "$pgsql_database$"
+		"-l" = "$pgsql_username$"
 		"-p" = "$pgsql_password$"
 	}
 
