Add nagios-plugins-contrib package

--- a/Dockerfiles/icinga2/Dockerfile
+++ b/Dockerfiles/icinga2/Dockerfile
@@ -35,7 +35,7 @@ RUN echo "icinga2-classicui icinga2-classicui/adminpassword password $PREDEF_WEB
 RUN apt-get install -y -t wheezy-backports icinga2-classicui icinga2;\
 # nagios plugins from debian
  apt-get install -y -t wheezy-backports nagios-plugins-basic;\
- apt-get install -y -t wheezy-backports --no-install-recommends nagios-plugins-standard nagios-snmp-plugins;\
+ apt-get install -y -t wheezy-backports --no-install-recommends nagios-plugins-standard nagios-snmp-plugins nagios-plugins-contrib;\
 # install dependencies for nagios-plugins-standard
  apt-get install -y -t wheezy-backports --no-install-recommends  dnsutils snmp libmysqlclient18;\
 # install dependencies for nagios-snmp-plugins
