Adding checks jabber and phpfpm-status

--- a/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
+++ b/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
@@ -159,3 +159,19 @@ object CheckCommand "httpd_status" {
 
 	vars.httpd_status_address = "$address$"
 }
+
+object CheckCommand "jabber" {
+	import "plugin-check-command"
+
+	command = PluginDir + "/check_jabber"
+
+	arguments = {
+		"-H" = "$jabber_address$"
+		"-p" = "$jabber_port$"
+		"-t" = "$jabber_timeout$"
+		"-w" = "$jabber_warn$"
+		"-c" = "$jabber_crit$"
+	}
+
+	vars.jabber_address = "$address$"
+}
