--- a/Dockerfiles/icinga2/conf.d/plugins.d/local_command-unofficial-plugins.conf
+++ b/Dockerfiles/icinga2/conf.d/plugins.d/local_command-unofficial-plugins.conf
@@ -28,3 +28,24 @@ object CheckCommand "openvpn" {
 	vars.openvpn_tcp = false
 }
 
+object CheckCommand "phpfpm-status" {
+	import "plugin-check-command"
+
+	command = MPluginDir + "/check_phpfpm_status"
+
+	arguments = {
+		"-H" = "$phpfpm_address$"
+		"-p" = "$phpfpm_port$"
+		"-u" = "$phpfpm_uri$"
+		"-s" = "$phpfpm_vhost$"
+		"-S" = {
+			set_if = "$phpfpm_ssl$"
+		}
+		"-t" = "$phpfpm_timeout$"
+		"-w" = "$phpfpm_warn$"
+		"-c" = "$phpfpm_crit$"
+	}
+
+	vars.phpfpm_address = "$address$"
+	vars.phpfpm_ssl = false
+}
