Fix syntax to make it compilant for latest icinga2 release

--- a/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
+++ b/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
@@ -30,7 +30,7 @@ template CheckCommand "snmp-manubulon-command" {
 object CheckCommand "snmp-load" {
 	import "snmp-manubulon-command",
 
-	command = PluginDir + "/check_snmp_load.pl"
+	command = [ PluginDir + "/check_snmp_load.pl" ]
 
 	arguments += {
 		"-T" = "$snmp_load_type$"
@@ -43,7 +43,7 @@ object CheckCommand "snmp-load" {
 object CheckCommand "snmp-memory" {
 	import "snmp-manubulon-command",
 
-	command = PluginDir + "/check_snmp_mem.pl"
+	command = [ PluginDir + "/check_snmp_mem.pl" ]
 
 	arguments += {
 		"-b" = {
@@ -59,7 +59,7 @@ object CheckCommand "snmp-memory" {
 object CheckCommand "snmp-diskspace" {
 	import "snmp-manubulon-command",
 
-	command = PluginDir + "/check_snmp_storage.pl"
+	command = [ PluginDir + "/check_snmp_storage.pl" ]
 
 	arguments += {
 		"-m" = "$snmp_disk_mounts$"
@@ -73,7 +73,7 @@ object CheckCommand "snmp-diskspace" {
 object CheckCommand "snmp-interface" {
 	import "snmp-manubulon-command",
 
-	command = PluginDir + "/check_snmp_int.pl"
+	command = [ PluginDir + "/check_snmp_int.pl" ]
 
 	arguments += {
 		"-n" = "$snmp_interface$"
@@ -99,9 +99,9 @@ object CheckCommand "snmp-interface" {
 object CheckCommand "mysql" {
 	import "plugin-check-command"
 
-	command = PluginDir + "/check_mysql"
+	command = [ PluginDir + "/check_mysql" ]
 
-	arguments = { 
+	arguments += { 
 		"-H" = "$mysql_server$"
 		"-d" = "$mysql_database$"
 		"-u" = "$mysql_username$"
@@ -116,9 +116,9 @@ object CheckCommand "mysql" {
 object CheckCommand "pgsql" {
 	import "plugin-check-command"
 
-	command = PluginDir + "/check_pgsql"
+	command = [ PluginDir + "/check_pgsql" ]
 
-	arguments = {
+	arguments += {
 		"-H" = "$pgsql_server$"
 		"-d" = "$pgsql_database$"
 		"-l" = "$pgsql_username$"
@@ -133,9 +133,9 @@ object CheckCommand "pgsql" {
 object CheckCommand "httpd_status" {
 	import "plugin-check-command"
 
-	command = PluginDir + "/check_httpd_status"
+	command = [ PluginDir + "/check_httpd_status" ]
 
-	arguments = {
+	arguments += {
 		"-H" = "$httpd_status_address$"
 		"-u" = "$httpd_status_uri$"
 		"-p" = "$httpd_status_port$"
@@ -150,9 +150,9 @@ object CheckCommand "httpd_status" {
 object CheckCommand "jabber" {
 	import "plugin-check-command"
 
-	command = PluginDir + "/check_jabber"
+	command = [ PluginDir + "/check_jabber" ]
 
-	arguments = {
+	arguments += {
 		"-H" = "$jabber_address$"
 		"-p" = "$jabber_port$"
 		"-t" = "$jabber_timeout$"
