--- a/Dockerfiles/icinga2/conf.d/plugins.d/local_command-unofficial-plugins.conf
+++ b/Dockerfiles/icinga2/conf.d/plugins.d/local_command-unofficial-plugins.conf
@@ -9,9 +9,9 @@ const MPluginDir = "/usr/lib/monitoring-plugins"
 object CheckCommand "openvpn" {
         import "plugin-check-command"
 
-        command = MPluginDir + "/check_openvpn"
+        command = [ MPluginDir + "/check_openvpn" ]
 
-        arguments = {
+        arguments += {
 		"host" = {
 			value = "$openvpn_address$"
 			skip_key = true
@@ -31,9 +31,9 @@ object CheckCommand "openvpn" {
 object CheckCommand "phpfpm-status" {
 	import "plugin-check-command"
 
-	command = MPluginDir + "/check_phpfpm_status"
+	command = [ MPluginDir + "/check_phpfpm_status" ]
 
-	arguments = {
+	arguments += {
 		"-H" = "$phpfpm_address$"
 		"-p" = "$phpfpm_port$"
 		"-u" = "$phpfpm_uri$"
