--- a/Dockerfiles/icinga2/conf.d/plugins.d/local_redefine_command-plugins.conf
+++ b/Dockerfiles/icinga2/conf.d/plugins.d/local_redefine_command-plugins.conf
@@ -2,9 +2,9 @@
 object CheckCommand "local_imap" {
         import "plugin-check-command"
 
-        command = PluginDir + "/check_imap"
+        command = [ PluginDir + "/check_imap" ]
 
-        arguments = {
+        arguments += {
                 "-H" = "$imap_address$"
 		"-p" = "$imap_port$"
         }
@@ -16,9 +16,9 @@ object CheckCommand "local_imap" {
 object CheckCommand "local_pop" {
         import "plugin-check-command"
 
-        command = PluginDir + "/check_pop"
+        command = [ PluginDir + "/check_pop" ]
 
-        arguments = {
+        arguments += {
                 "-H" = "$pop_address$"
 		"-p" = "$pop_port$"
         }
@@ -30,9 +30,9 @@ object CheckCommand "local_pop" {
 object CheckCommand "local_smtp" {
         import "plugin-check-command"
 
-        command = PluginDir + "/check_smtp"
+        command = [ PluginDir + "/check_smtp" ]
 
-        arguments = {
+        arguments += {
                 "-H" = "$smtp_address$"
 		"-p" = "$smtp_port$"
                 "-f" = "$smtp_mail_from$"
