Optimizing for less filesystem commits

--- a/Dockerfiles/icinga2/Dockerfile
+++ b/Dockerfiles/icinga2/Dockerfile
@@ -15,10 +15,11 @@ MAINTAINER Jan Wagner "waja@cyconet.org"
 # configure needed package sources
 RUN echo "deb http://debmon.org/debmon debmon-wheezy main" > /etc/apt/sources.list.d/debmon-wheezy.list;\
  echo "deb http://cdn.debian.net/debian/ wheezy-backports main non-free contrib" > /etc/apt/sources.list.d/wheezy-backports.list;\
- apt-get install --no-install-recommends -y wget;\
+ apt-get update && apt-get install --no-install-recommends -y wget;\
  wget -O - http://debmon.org/debmon/repo.key | apt-key add -;\
  apt-get update;\
- apt-get -y upgrade
+ apt-get -y upgrade && \
+ rm -rf /var/lib/apt/lists/
 
 # prefine debconf questions
 # enable external commands
@@ -32,7 +33,7 @@ RUN echo "icinga2-classicui icinga2-classicui/adminpassword password $PREDEF_WEB
  echo "icinga2-classicui icinga2-classicui/adminpassword-repeat password $PREDEF_WEB_PW" | debconf-set-selections
 
 # package installation
-RUN apt-get install -y -t wheezy-backports icinga2-classicui icinga2;\
+RUN apt-get update && apt-get install -y -t wheezy-backports icinga2-classicui icinga2;\
 # nagios plugins from debian
  apt-get install -y -t wheezy-backports nagios-plugins-basic;\
  apt-get install -y -t wheezy-backports --no-install-recommends nagios-plugins-standard nagios-snmp-plugins nagios-plugins-contrib;\
@@ -45,8 +46,8 @@ RUN apt-get install -y -t wheezy-backports icinga2-classicui icinga2;\
 # (unofficial) monitoring-plugins-cyconet
  echo "deb     http://ftp.cyconet.org/debian restricted     main non-free contrib" > /etc/apt/sources.list.d/restricted-cyconet.list;\
  apt-get update;\
- apt-get install -y --force-yes --no-install-recommends monitoring-plugins-cyconet
-
+ apt-get install -y --force-yes --no-install-recommends monitoring-plugins-cyconet  && \
+ rm -rf /var/lib/apt/lists/
 
 # start init script to get environment initialised
 RUN /etc/init.d/icinga2 start && /etc/init.d/icinga2 stop
