Adjust icinga2 config of supervisord for new version

--- a/Dockerfiles/icinga2/supervisord/icinga.conf
+++ b/Dockerfiles/icinga2/supervisord/icinga.conf
@@ -1,4 +1,4 @@
 [program:icinga2]
-command=/usr/sbin/icinga2 -c /etc/icinga2/icinga2.conf -u nagios -g nagios -e /var/log/icinga2/icinga2.err
+command=/usr/sbin/icinga2 --no-stack-rlimit daemon -d -e /var/log/icinga2/icinga2.err --reload-internal 287
 user=nagios
 priority=9998
