--- a/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
+++ b/Dockerfiles/icinga2/conf.d/plugins.d/local_command-plugins.conf
@@ -1,60 +1,7 @@
 /* check command templates */
 
-/* template for nagios-snmp-plugins (http://nagios.proy.org/index_snmp.html)*/
-template CheckCommand "snmp-manubulon-command" {
-	import "plugin-check-command",
-
-	arguments = {
-		"-H" = "$snmp_address$"
-		"-C" = "$snmp_community$"
-		"-p" = "$snmp_port$"
-		"-v2c" = {
-			set_if = "$snmp_v2c$"
-			order = 1
-		}
-		"-f" = {
-			set_if = "$snmp_perf$"
-		}
-		"-w" = "$snmp_warn$"
-		"-c" = "$snmp_crit$"
-	}
-
-	vars.snmp_address = "$address$"
-	vars.snmp_community = "public"
-	vars.snmp_v2c = false
-	vars.snmp_perf = true
-}
-
-/* check commands itself */
-
-object CheckCommand "snmp-load" {
-	import "snmp-manubulon-command",
-
-	command = [ PluginDir + "/check_snmp_load.pl" ]
-
-	arguments += {
-		"-T" = "$snmp_load_type$"
-	}
-
-	vars.snmp_warn = "4,3,3"
-	vars.snmp_crit = "8,5,5"
-}
-
-object CheckCommand "snmp-memory" {
-	import "snmp-manubulon-command",
-
-	command = [ PluginDir + "/check_snmp_mem.pl" ]
-
-	arguments += {
-		"-b" = {
-			set_if = "$snmp_mem_buffer$"
-		}
-	}
-
-	vars.snmp_mem_buffer = true
-	vars.snmp_warn = "95,60"
-	vars.snmp_crit = "99,90"
-}
+/* import manubulon command pre definitions */
+include <manubulon>
 
 object CheckCommand "snmp-diskspace" {
 	import "snmp-manubulon-command",
@@ -68,32 +15,6 @@ object CheckCommand "snmp-diskspace" {
 	vars.snmp_disk_mounts = "^/$$"
 	vars.snmp_warn = "80"
 	vars.snmp_crit = "90"
-}
-
-object CheckCommand "snmp-interface" {
-	import "snmp-manubulon-command",
-
-	command = [ PluginDir + "/check_snmp_int.pl" ]
-
-	arguments += {
-		"-n" = "$snmp_interface$"
-		"-k" = {
-			set_if = "$snmp_interface_perf$"
-		}
-		"-B" = {
-			set_if = "$snmp_interface_bits$"
-		}
-		"--64bits" = {
-			set_if = "$snmp_interface_64bit$"
-		}
-	}
-
-	vars.snmp_interface = "eth0"
-	vars.snmp_interface_perf = true
-	vars.snmp_interface_bits = true
-	vars.snmp_interface_64bit = false
-	vars.snmp_warn = "350,250"
-	vars.snmp_crit = "0,0"
 }
 
 object CheckCommand "mysql" {
@@ -162,3 +83,89 @@ object CheckCommand "jabber" {
 
 	vars.jabber_address = "$address$"
 }
+
+/* template for nagios-snmp-plugins (http://nagios.proy.org/index_snmp.html)*/
+/*
+template CheckCommand "snmp-manubulon-command" {
+	import "plugin-check-command",
+
+	arguments = {
+		"-H" = "$snmp_address$"
+		"-C" = "$snmp_community$"
+		"-p" = "$snmp_port$"
+		"-v2c" = {
+			set_if = "$snmp_v2c$"
+			order = 1
+		}
+		"-f" = {
+			set_if = "$snmp_perf$"
+		}
+		"-w" = "$snmp_warn$"
+		"-c" = "$snmp_crit$"
+	}
+
+	vars.snmp_address = "$address$"
+	vars.snmp_community = "public"
+	vars.snmp_v2c = false
+	vars.snmp_perf = true
+}
+*/
+
+/* check commands itself */
+/*
+object CheckCommand "snmp-load" {
+	import "snmp-manubulon-command",
+
+	command = [ PluginDir + "/check_snmp_load.pl" ]
+
+	arguments += {
+		"-T" = "$snmp_load_type$"
+	}
+
+	vars.snmp_warn = "4,3,3"
+	vars.snmp_crit = "8,5,5"
+}
+
+object CheckCommand "snmp-memory" {
+	import "snmp-manubulon-command",
+
+	command = [ PluginDir + "/check_snmp_mem.pl" ]
+
+	arguments += {
+		"-b" = {
+			set_if = "$snmp_mem_buffer$"
+		}
+	}
+
+	vars.snmp_mem_buffer = true
+	vars.snmp_warn = "95,60"
+	vars.snmp_crit = "99,90"
+}
+
+object CheckCommand "snmp-interface" {
+	import "snmp-manubulon-command",
+
+	command = [ PluginDir + "/check_snmp_int.pl" ]
+
+	arguments += {
+		"-n" = "$snmp_interface$"
+		"-k" = {
+			set_if = "$snmp_interface_perf$"
+		}
+		"-B" = {
+			set_if = "$snmp_interface_bits$"
+		}
+		"--64bits" = {
+			set_if = "$snmp_interface_64bit$"
+		}
+	}
+
+	vars.snmp_interface = "eth0"
+	vars.snmp_interface_perf = true
+	vars.snmp_interface_bits = true
+	vars.snmp_interface_64bit = false
+	vars.snmp_warn = "350,250"
+	vars.snmp_crit = "0,0"
+}
+*/
+
