--- a/Dockerfiles/icinga2/Dockerfile
+++ b/Dockerfiles/icinga2/Dockerfile
@@ -40,11 +40,11 @@ RUN apt-get update && apt-get install -y -t wheezy-backports-sloppy icinga2-clas
  apt-get install -y -t wheezy-backports nagios-plugins-basic;\
  apt-get install -y -t wheezy-backports --no-install-recommends nagios-plugins-standard nagios-snmp-plugins nagios-plugins-contrib;\
 # install dependencies for nagios-plugins-standard
- apt-get install -y -t wheezy-backports --no-install-recommends  dnsutils snmp libmysqlclient18;\
+ apt-get install -y --no-install-recommends dnsutils snmp libmysqlclient18;\
 # install dependencies for nagios-snmp-plugins
- apt-get install -y -t wheezy-backports --no-install-recommends netbase;\
+ apt-get install -y --no-install-recommends netbase;\
 # install dependencies for nagios-plugins-contrib
- apt-get install -y -t wheezy-backports --no-install-recommends libnagios-plugin-perl liblwp-useragent-determined-perl;\
+ apt-get install -y --no-install-recommends libnagios-plugin-perl liblwp-useragent-determined-perl;\
 # (unofficial) monitoring-plugins-cyconet
  echo "deb     http://ftp.cyconet.org/debian restricted     main non-free contrib" > /etc/apt/sources.list.d/restricted-cyconet.list;\
  apt-get update;\
